# maxdirector

./: .gitignore  README.md  SPEC.md  pyproject.toml
cv_sidecar/: __init__.py  backends.py  requirements-sidecar.txt  server.py
docs/: RUNBOOK.md
maxdirector/: __init__.py  bootstrap.py
maxdirector/core/: __init__.py  anchors.py  assets.py  cinematic.py  critic.py  cv_client.py  digest_format.py  director.py  guards.py  models.py  omega.py  packs.py  plan_schema.py  provider.py  reference.py  resolve.py  scoring.py  scout.py  storyboard.py
maxdirector/core/render/: __init__.py  backend.py  vantage.py
maxdirector/data/cinematic/: camera_moves.json  directors.json
maxdirector/data/packs/: vray7.json
maxdirector/maxbridge/: __init__.py  asset_import.py  authoring.py  backup.py  config.py  controller.py  digest.py  framing.py  journal.py  maxscript.py  renderer_query.py  scout.py  undo.py  vantage.py  vray_render.py
maxdirector/startup/: maxdirector_startup.py
maxdirector/ui/: __init__.py  dock.py
scripts/: experiment_placement.py  install.bat  preflight.py  run_spike_create.ms  spike_headless_create.py  spike_provider_ping.py  spike_sidecar.py  spike_vantage_cli.py
tasks/: plan.md  todo.md
tests/: conftest.py  test_anchors.py  test_assets_reference_render.py  test_critic.py  test_director.py  test_multimodal.py  test_no_pymxs.py  test_pipeline_e2e.py  test_plan_schema.py  test_resolve.py  test_review_fixes.py  test_robustness.py  test_scoring_guards.py  test_scout.py
